--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/select": "^2.2.5",
+    "axios": "^1.7.3",
     "framer-motion": "^11.3.24",
+    "hugeicons-react": "^0.3.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
