--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "hugeicons-react": "^0.3.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
