--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
