--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,15 @@
     "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.4.0",
-    "framer-motion": "^11.3.24",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.30",
     "hugeicons-react": "^0.3.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
